# scrapper-new

./: .gitignore  Dockerfile  Dockerfile-Backup  ads.csv  appspec.yml  backup.sqlite3  db.sqlite3  docker_run.sh  entrypoint.sh  keywords.csv  pyproject.toml  readme.MD  requirements.txt
crawler/: admin.py  models.py  serializer.py  urls.py  views.py
crawler/ResponseHelper/: response.py
crawler/migrations/: 0001_initial.py  0002_spreadsheetdata.py  0003_alter_ad_model_screenshot.py  0004_alter_ad_model_ad_description.py
crawler/static/: adinfo.js  chart.js  index.js  index2.html  index3.html  scraper.css  search.css
crawler/static/pages/tables/: data.html
crawler/system/: adscraper.py  webcontent.py
crawler/templates/: ad_info.html  admin_index.html  ads.html  calendar.html  dialer.html  scraper_data.html  search.html  spreadsheet.html  user_adinfo.html  userads.html
gunicorn/: gunicorn.service
nginx/: nginx.conf
scraper/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: clean_instance.sh  gunicorn.sh  instance_os_dependencies.sh  nginx.sh  python_dependencies.sh  start_app.sh
static/: script.js  style.css
static/admin-lte/: starter.html
static/css/: dashboard.css  dashboardstyle.min.css  style.css
static/plugins/: chart.min.js  feather.min.js
